# topic_watch

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .worktreeinclude  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  TODOS.md  config.example.yml  docker-compose.override.example.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  install.ps1  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker-publish.yml
app/: __init__.py  check_context.py  checker.py  cli.py  config.py  crud.py  database.py  feed_backoff.py  interval.py  log_redaction.py  logging_config.py  main.py  models.py  notifications.py  opml.py  scheduler.py  url_validation.py  webhooks.py
app/analysis/: citations.py  knowledge.py  llm.py  prompts.py  restatement.py
app/migrations/: __init__.py  m001_baseline.py  m002_pending_notifications.py  m003_feed_mode.py  m004_check_interval.py  m005_status_changed_at.py  m006_topic_tags.py  m007_feed_health.py  m008_interval_minutes.py  m009_article_provider.py  m010_pending_webhooks.py  m011_topic_thresholds.py  m012_check_result_tokens.py  m013_topic_init_attempts.py  m014_perf_indexes.py  m015_check_result_stage_error.py  m016_pending_claimed_at.py  m017_pending_last_error.py  m018_article_published_at.py  m019_feed_validators.py  m020_check_result_seen_at.py  m021_scrub_stub_notes.py  m022_topic_novelty_instruction.py  m023_topic_importance_threshold.py
app/scraping/: __init__.py  content.py  exa.py  google_news.py  providers.py  relevance.py  routing.py  rss.py
app/static/: components.css  notifications.js  theme.js  themes.css
app/templates/: _feed_health_row.html  _feed_source.html  _feed_status.html  _feed_validation.html  _pagination.html  _topic_list.html  _topic_row.html  base.html  dashboard.html  error.html  feed_health.html  settings.html  setup.html  topic_add.html  topic_detail.html  topic_edit.html  topic_status.html
app/web/: api.py  csrf.py  dependencies.py  routes.py  setup_middleware.py  state.py
app/web/routers/: __init__.py  _validation.py  background.py  dashboard.py  exports.py  feed_health.py  opml.py  settings.py  templates.py  topics.py
contrib/: topic-watch-startup.bat  topic-watch.desktop  topic-watch.service
docs/: CHANGELOG.md  SECURITY.md
evals/: __init__.py  __main__.py  recorder.py  runner.py  scenario.py
evals/scenarios/: dup_event.yml  knowledge_init.yml
scripts/: install.ps1  install.sh  update.sh
tests/: conftest.py  test_analysis.py  test_api.py  test_article_retention.py  test_background_task_timeouts.py  test_bulk_actions.py  test_check_lock_safety.py  test_checker.py  test_cli.py  test_confidence_badge.py  test_config.py  test_correlation_ids.py  test_cross_topic_dedup.py  test_csrf_error_handling.py  test_data_export.py  test_data_labels.py  test_database.py  test_evals.py  test_exa.py  test_feed_backoff.py  test_feed_health.py  test_feed_health_display.py  test_feed_validation.py  test_force_notify.py  test_google_news.py  test_install_hygiene.py  test_interval.py  test_knowledge_token_budget.py  test_llm_rate_limit_backoff.py  test_log_redaction.py  test_logging_config.py  test_markdown_filter.py  test_mask_url.py  test_models_from_row.py  test_network_error_handling.py  test_new_info_seen.py  test_notification_test.py  test_notifications.py  test_opml.py  test_perf_concurrency.py  (+23 more)
tests/helpers/: __init__.py  redirect_transport.py  rss_fixtures.py  stub_llm.py
tests/smoke/: __init__.py  test_smoke_pipeline.py
